--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
          Challenge by
          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-         >. Coded by <a href="#">Leandro Neves</a>.
+         >. Coded by
+         <a href="https://www.linkedin.com/in/leandrnvs">Leandro Neves</a>.
       </div>
    </body>
 </html>
