Correção de cores

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                   <span class="card__body-price-description-title"
                      >Annual Plan</span
                   >
-                  $59.99/year
+                  <span class="card__body-price-description-value"
+                     >$59.99/year</span
+                  >
                </div>
                <a href="#" class="card__body-price-btn">Change</a>
             </div>
